--- a/src/components/sideTrends/index.css
+++ b/src/components/sideTrends/index.css
@@ -4,7 +4,11 @@
   display: none;
   justify-content: flex-start;
   align-items: center;
-  
+  height: 100vh;
+  overflow-y: scroll;
+  height: 100vh;
+  transition: all 0.35s;
+
 }
 
 
@@ -49,17 +53,20 @@
 
 
 .terms{
-  width: 80%;
-  margin:15px 0 10px 0;
-  padding-left: 20px;
-  color: grey;
-  font-size: 0.9rem;;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-
+  width: 70%;
 }
 .terms ul{
+
+ margin:15px 15px 10px 0;
+ color: grey;
+ font-size: 0.9rem;;
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-start;
+ align-items: flex-start;
  list-style-type:none;
  padding:0;
  
@@ -70,6 +77,9 @@
 .terms ul li a{
   text-decoration: none;
   color: grey;
+  padding:0;
+  margin:0;
+
   
 }
 
