--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -95,7 +95,7 @@ margin: 0;
   font-weight: bold;
 }
 
-.whatsappen{
+.Header .whatsappen{
   display:none;
   flex-direction:column;
   padding:20px 0 0 0;
@@ -108,9 +108,18 @@ margin: 0;
     display:flex;
     flex-direction: row;
     gap:20px;
-    padding-left:20px
+    width: 100%;
+    padding: 0 10px;
   }
 
+  .whatsappen .text form{
+    display:flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 5px;
+
+  }
 
   .text input{
   height:30px;
@@ -218,7 +227,7 @@ margin: 0;
 
 
       @media screen and (min-width: 800px) {
-        .whatsappen {
+        .Header .whatsappen {
           display:flex;
         }
         }
